cropped homepage image, fixed responsiv image

--- a/style.css
+++ b/style.css
@@ -11,8 +11,6 @@ html {
     min-width: 100dvw;
     max-width: 100dvw;
     min-height: 100%;
-    display: grid;
-    grid-template-rows: 115px 1fr 100px;
 }
 
 body {
@@ -20,7 +18,7 @@ body {
     max-width: 100%;
     min-height: 100%;
     display: grid;
-    grid-template-rows: 115px 1fr 200px;
+    grid-template-rows: 117px 1fr 200px;
 }
 
 
@@ -38,7 +36,7 @@ a:hover {
 
 #topnav p {
     float: right;
-    padding: 5px 30px 5px 0;
+    margin: 5px 30px 5px 0;
     font-size: 18px;
 }
 
@@ -73,37 +71,36 @@ header img {
 
 #logo {
     justify-content: left;
+    margin-left: 20px;
 
 }
 
 #menu {
     float: right;
+    margin-right: 20px;
 }
 
 /*main*/
 
+#img-section {
+    background-color: #779882;
+}
+
 #img-section img {
-    max-width: 100%;
-    height: 500px;
     width: 100%;
-    aspect-ratio: 1/2;
-
-
 }
 
 #community-section {
     max-width: 100%;
     width: 100%;
-    height: auto;
+    /*height: auto;*/
     color: #f3f4ef;
-    background-color: #779882;
+    /*background-color: #779882;*/
     text-align: center;
-
-
 }
 
 
-#community-section p, h1 {
+#community-section p, #community-section h1 {
     display: flex;
     justify-content: center;
     /*align-content: center;*/
@@ -128,7 +125,7 @@ header img {
 }
 
 
-#sign-up-section,p {
+#sign-up-section p {
     line-height: 1.5;
     font-size: 22px;
     margin: 15px;
@@ -206,7 +203,7 @@ header img {
     align-items: center;
     margin: 0 auto;
 }
-#together-section, p {
+#together-section p {
     line-height: 1.5;
     font-size: 22px;
     max-width: 1200px;
@@ -264,7 +261,7 @@ footer li {
     }
 
     #img-section img {
-        height: 1000px;
+        /*height: 1000px;*/
 
     }
 
